# vusi

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  cliff.toml  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aur.yml  autofix.yml  ci.yml  crates.yml
src/: generator.rs  lib.rs  main.rs  math.rs  provider.rs  signature.rs
src/attack/: biased_nonce.rs  half_half.rs  lcg.rs  mod.rs  nonce_reuse.rs  polynonce.rs  related_nonce.rs  timing.rs
src/math/: feanor.rs  mod.rs
tests/: hex_input.rs  integration.rs  polynonce_spike.rs
tests/fixtures/: nonce_reuse.json  nonce_reuse_hex.json  polynonce.json
