[package]
name = "vusi"
version = "0.1.0"
edition = "2021"
authors = ["oritwoen"]
description = "ECDSA signature vulnerability analysis library and CLI"
license = "MIT"
repository = "https://github.com/oritwoen/vusi"
keywords = ["ecdsa", "signature", "vulnerability", "nonce-reuse", "cryptography"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
# Cryptography
k256 = { version = "0.13", features = ["arithmetic"] }

# Decimal conversion
num-bigint = "0.4"
num-traits = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Utilities
hex = "0.4"

# Optional blockchain integration
boha = { version = "0.14", optional = true }

feanor-math = { version = "3.5", optional = true }

[features]
default = []
boha = ["dep:boha"]
polynonce = ["dep:feanor-math"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "vusi"
path = "src/main.rs"

[lib]
name = "vusi"
path = "src/lib.rs"
